src/app/components/dashboard/_dashboard.scss
@include exports(dashboard) {

  h5 {
    margin-bottom: 0;
  }

  h6 {
    font-size: .8rem;
    font-weight: bold;
    margin-bottom: 0;
    text-transform: uppercase;
  }

  table {
    thead,
    tbody,
    tfoot {
      background: none;
      border: 0;
    }
  }

  .dark {
    background-color: $header-color;
  }

  .row {
    .row {
      .no-margin-hr {
        @extend %no-margin-left;
        @extend %no-margin-right;
      }
    }

    &.border-top {
      border-top: 1px solid $gray;
    }

    &.border-bottom {
      border-bottom: 1px solid $gray;
      padding-bottom: 22px;
    }
  }

  .column {
    .align-middle {
      padding-bottom: .5rem;
      padding-top: .5rem;
    }
  }

  .page-title {
    font-family: 'Cantata One', serif;
    font-weight: bold;
    padding: 10px 0 5px;
  }

  .show-for-medium .page-title {
    padding: 20px;
  }

  .page-title a {
    color: $white;
  }

  .page-subtitle {
    color: $white;
    font-family: 'Open Sans Condensed', sans-serif;
    padding: 5px 0 10px;
  }

  .page-subtitle h5 {
    font-size: .9rem;
  }

  .show-for-medium .page-subtitle {
    padding: 20px;
  }

  .callout {
    margin-top: 10px;
  }

  .callout h1 {
    font-family: 'Open Sans Condensed', sans-serif;
    font-weight: bold;
  }

  .align-middle {
    .columns {
      padding-bottom: .5rem;
      padding-top: .5rem;
    }
  }

  .has-overlay {
    position: relative;
  }

  .overlay {
    background-color: $white;
    height: 100%;
    opacity: .8;
    position: absolute;
    width: 100%;
    z-index: 10;
  }

  .beer-icon-container {
    background-color: $gray-light;
    border-radius: 50%;
    cursor: pointer;
    display: inline-block;
    height: 75px;
    padding: 10px;
    transition: all cubic-bezier(.25, .46, .45, .94) .5s;
    width: 75px;
  }

  .beer-icon-container.problem-type {
    height: 65px;
    width: 65px;
  }


  .beer-icon-container.problem-type img {
    height: 90%;
    left: 3px;
    top: 1px;
  }

  .beer-icon-container.selected {
    background-color: $active-color;
  }

  .beer-icon-container .beer-icon {
    left: 4px;
    position: relative;
    top: 3px;
  }

  .beer-icon-container.problem-type .beer-icon.move-down {
    height: 70%;
  }

  .beer-icon-container .beer-icon.move-down {
    top: 8px;
  }

  .beer-icon-container .beer-icon.move-up {
    top: 0;
  }

  .good-beer {
    background-color: lighten($success-color, 40%);
  }

  .selected-good {
    background-color: $success-color;
  }

  .selected-empty {
    background-color: $warning-color;
  }

  .selected-issues {
    background-color: $alert-color;
  }

  .selected-issues-background {
    background-color: $bad-color;
    padding-bottom: 1rem;
    padding-top: 1rem;
  }

  .arrow-left {
    border-bottom: 20px solid transparent;
    border-right: 20px solid $primary-color;
    border-top: 20px solid transparent;
    height: 0;
    margin-top: 8px;
    width: 0;
  }

  .arrow-up {
    border-bottom: 15px solid $bad-color;
    border-left: 15px solid transparent;
    border-right: 15px solid transparent;
    height: 0;
    margin-bottom: -8px;
    width: 0;
  }

  .inline-label {
    margin-bottom: 0;
  }

  .button {
    margin-right: 0;
    padding-left: 0;
    padding-right: 0;
    width: 4em;
  }

  .switch {
    margin-bottom: 0;
    position: relative;
    right: 0;
    transform: translate3d(0, 0, 0);
  }

  input[type='text'] {
    box-shadow: none;
    color: $black;
    font-size: 1.3rem;
    font-weight: bold;
    margin-bottom: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;

    &:disabled {
      background: none;
      border: 0;
    }

    &:disabled.clickable {
      cursor: pointer;
    }

    &:hover.clickable {
      text-decoration: underline;
    }
  }

  input[type='checkbox'] + label,
  input[type='radio'] + label {
    margin: 0;

    &.float-center {
      display: block;
      margin-left: auto;
      margin-right: auto;
    }
  }

  .edit-type {
    position: relative;
  }

  .edit-type .clear {
    background-color: $gray-6;
    border-radius: 50%;
    color: $white;
    cursor: pointer;
    font-family: sans-serif;
    font-size: 1.2rem;
    font-weight: bold;
    height: 20px;
    line-height: .9;
    position: absolute;
    right: 11px;
    text-align: center;
    top: 17px;
    vertical-align: middle;
    width: 20px;
  }

  .underline {
    text-decoration: underline;
  }

  .has-tip {
    border: 0;
    font-weight: normal;
  }

  .fill-width {
    width: 100%;
  }

  .edit-button {
    height: 40px;
    width: 73%;
  }

  .best-bets-title {
    font-weight: bold;
    margin-bottom: 0;
    text-transform: uppercase;
  }

  .age-1 {
    color: $gray-1;
  }

  .age-2 {
    color: $gray-2;
  }

  .age-3 {
    color: $gray-3;
  }

  .age-4 {
    color: $gray-4;
  }

  .age-5 {
    color: $gray-5;
  }

  .age-6 {
    color: $gray-6;
  }

  .age-7 {
    color: $gray-7;
  }

  .age-8 {
    color: $gray-8;
  }


  // Animations

  .problems {
    transition: all cubic-bezier(.25, .46, .45, .94) .5s;
  }

  .problems.selected-problems {
    background-color: $bad-color;
  }

  .animate-if.ng-enter,
  .animate-if.ng-leave {
    display: block;
    position: relative;
    transition: all cubic-bezier(.25, .46, .45, .94) .5s;
  }

  .animate-if.ng-enter,
  .animate-if.ng-leave.ng-leave-active {
    opacity: 0;
    top: -50px;
    //height: 0px;
  }

  .animate-if.ng-leave,
  .animate-if.ng-enter.ng-enter-active {
    opacity: 1;
    top: 0;
    //height: 30px;
  }
}

